--- a/first-semester/WTI/Labs/Lab_6/Task_10/index.html
+++ b/first-semester/WTI/Labs/Lab_6/Task_10/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Task_1</title>
-  </head>
-  <body>
-    <h1>Ыыы</h1>
-    <script src="script.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            Задача 10
+        </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <main id="main">
+		    <header id="m">
+                <article id="p1"></article>
+                <article id="p2"></article>
+            </header>
+            <button id="button">Поплыли</button>
+        </main>
+        <script src="script.js"></script>
+	</body>
 </html>
