--- a/first-semester/WTI/Labs/Lab_6/Task_8/index.html
+++ b/first-semester/WTI/Labs/Lab_6/Task_8/index.html
@@ -3,10 +3,32 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Task_1</title>
+    <title>Task_8</title>
   </head>
   <body>
-    <h1>Ыыы</h1>
     <script src="script.js"></script>
+    <p>Прогресс-бар</p>
+    <progress value="0" max="100" id="progress"></progress> <span id="percent">0%</span> <br>
+    <button id="progress_button">Увеличение значения</button>
+
+    <script>
+      let value = 0;
+      const button = document.getElementById("progress_button");
+      const progress_bar = document.getElementById("progress");
+      const percent_bar = document.getElementById("percent");
+
+      function choose_progress() {
+        if (value < 100) {
+          value += 5;
+          progress_bar.value = String(value);
+          percent_bar.innerHTML = value + "%";
+        }
+        if (value == 100) {
+          button.style.display = 'none';
+        }
+      }
+
+      button.addEventListener('click', () => choose_progress());
+    </script>
   </body>
 </html>
