Pass Lab_7 and Lab_8

--- a/first-semester/WTI/Labs/Lab_7/Task_2/index.html
+++ b/first-semester/WTI/Labs/Lab_7/Task_2/index.html
@@ -2,92 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Verso - VSO Token</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            color: #fff;
-            background: linear-gradient(to bottom, #3b8dff, #0050c7);
-        }
-        header {
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        header nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: white;
-        }
-        .btn-buy {
-            padding: 8px 15px;
-            background-color: #fff;
-            color: #3b8dff;
-            border-radius: 5px;
-            text-decoration: none;
-        }
-        section {
-            padding: 40px 20px;
-            text-align: center;
-        }
-        .listings {
-            display: flex;
-            justify-content: center;
-            gap: 50px;
-            margin-top: 30px;
-        }
-        .listings div {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .guide {
-            display: flex;
-            justify-content: center;
-            gap: 50px;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        .guide img {
-            max-width: 250px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-        }
-        table {
-            width: 80%;
-            margin: 0 auto 30px auto;
-            background-color: white;
-            color: #333;
-            border-collapse: collapse;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-        th, td {
-            padding: 12px;
-            border-bottom: 1px solid #ddd;
-        }
-        footer {
-            background-color: #0050c7;
-            padding: 40px 20px;
-            text-align: center;
-        }
-        .newsletter input {
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            width: 250px;
-        }
-        .newsletter button {
-            padding: 10px 15px;
-            background-color: #fff;
-            color: #0050c7;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
+    <title>VSO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -111,13 +27,13 @@
     <div class="listings">
         <div>
             <h3>CEX Listings</h3>
-            <img src="gateio.png" alt="Gate.io" width="150">
+            <img src="img/gateio.png" alt="Gate.io" width="150">
         </div>
         <div>
             <h3>DEX Listings</h3>
-            <img src="pangolin.png" alt="Pangolin" width="150">
-            <img src="traderjoe.png" alt="Trader Joe" width="150">
-            <img src="dctdao.png" alt="DCTDAO" width="150">
+            <img src="img/pangolin.png" alt="Pangolin" width="150">
+            <img src="img/traderjoe.png" alt="Trader Joe" width="150">
+            <img src="img/dctdao.png" alt="DCTDAO" width="150">
         </div>
     </div>
 </section>
@@ -126,11 +42,11 @@
     <h1>How to add VSO to Metamask</h1>
     <div class="guide">
         <div>
-            <img src="metamask_network.png" alt="Metamask Network">
+            <img src="img/metamask_network.png" alt="Metamask Network">
             <p>1. Connect Metamask to Avalanche C-Chain.</p>
         </div>
         <div>
-            <img src="metamask_token.png" alt="Metamask Add Token">
+            <img src="img/metamask_token.png" alt="Metamask Add Token">
             <p>2. Add VSO token contract address.</p>
         </div>
     </div>
